ec2.tf
provider "aws" {
  region = "us-west-2"
}

resource "aws_instance" "example" {
  ami           = "ami-061ad72bc140532fd" # Replace with a valid AMI ID for us-west-2
  instance_type = "t2.micro"
  security_groups = [aws_security_group_allow_ssh.id]
  subnet_id= aws_subnet.main_subnet.id

  tags = {
    Name = "demo-instance"
  }
}
